--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -9,9 +9,31 @@
         <h1>
             This is Shuo's Page!
         </h1>
-        <h2>
-            Headline level 2
-        </h2>
+        <h2>Headline level 2</h2>
+        <ul>
+            <li>Conhdkajdsh</li>
+            <li>asdad</li>
+        </ul>
+        <ol><li>Bacon</li>
+            <li>
+                qweasfaf
+            </li>
+            <li>
+                sfsagfag
+            </li>
+            <li>
+                EGGS
+                <ul>
+                    <li>
+                        hard boiled
+                    </li>
+                    <li>
+                        Scrambled
+                    </li>
+                    <li>Sunny side up</li>
+                </ul>
+            </li>
+        </ol>
         <h3>
             Headline level 3
         </h3>
@@ -24,5 +46,7 @@
         <h6>
             Headline level 6
         </h6>
+        <p> this is very first page</p>
+        <p> this is very first page</p>
     </body>
 </html>
