--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -9,10 +9,10 @@
         <div>
             <nav>
                 <a href="index.html">
-                    Home
+                    Shuo's Web1
                 </a>
                  <a href="about.html">
-                    About
+                    About Me
                 </a>
                  <a href="search.html">
                     Search
@@ -29,7 +29,7 @@
                     Shuo's Web 1 pages
                 </h1>
                 <p>
-                    Web development and design practice. See my progression
+                    Web development and design practice. See my progression of skills as I learn HTML and CSS.
                 </p>
                 <a href="about.html">
                     About me
@@ -37,6 +37,7 @@
             </div>
 
         </div>
+        <div>
             <div>
                 <a herf="search.html">
                     <img src="images/sky.jpg">
@@ -61,7 +62,7 @@
                     </a>
                 </h4>
                 <p>
-                    Menu for a coffee shop
+                    Menu for a  fake coffee shop
                 </p>
             </div>
             <div>
@@ -77,14 +78,16 @@
                     List of assignments that shows the progression of this site.
                 </p>
             </div>
-        <div>
-            
         </div>
         <footer>
             This page is a part of
-            <a href="http://web1.yukikodesign.com">web1</a>
-            .Check out the 
-            <a href="http://kitanobai.github.io/web1">other versions of the site.</a>
+            <a href="http://web1.yukikodesign.com">
+                web1
+            </a>
+            . Check out the 
+            <a href="http://kitanobai.github.io/web1">
+                other versions of the site.
+            </a>
         </footer>
     </body>
 </html>
