--- a/assignment-2/search.html
+++ b/assignment-2/search.html
@@ -3,8 +3,55 @@
         <title>
             My first page!!!
         </title>
+        
     </head>
     <body>
-        Search page
+        <div>
+            <nav>
+                <a href="index.html">
+                    Shuo's Web1
+                </a>
+                 <a href="about.html">
+                    About Me
+                </a>
+                 <a href="search.html">
+                    Search
+                </a>
+                 <a href="coffee.html">
+                    Coffee
+                </a>
+                 <a href="assignments.html">
+                    Assignments
+                </a>
+            </nav>
+            <div>
+                <h1>
+                    Search and Embeddables
+                </h1>
+                <p>
+                    Forms, video, and maps
+                </p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h1>
+                    Placeholder
+                </h1>
+                <p>
+                    Will add a search form, a video, and a map later!
+                </p>
+            </div>
+        </div>
+        <footer>
+            This page is a part of
+            <a href="http://web1.yukikodesign.com">
+                web1
+            </a>
+            . Check out the 
+            <a href="http://kitanobai.github.io/web1">
+                other versions of the site.
+            </a>
+        </footer>
     </body>
 </html>
