--- a/assignment-2/about.html
+++ b/assignment-2/about.html
@@ -3,8 +3,101 @@
         <title>
             My first page!!!
         </title>
+        
     </head>
     <body>
-        About page
+        <div>
+            <nav>
+                <a href="index.html">
+                    Shuo's Web1
+                </a>
+                 <a href="about.html">
+                    About Me
+                </a>
+                 <a href="search.html">
+                    Search
+                </a>
+                 <a href="coffee.html">
+                    Coffee
+                </a>
+                 <a href="assignments.html">
+                    Assignments
+                </a>
+            </nav>
+            <div>
+                <img src="images/me.jpg">
+                <h1>
+                    About Shuo
+                </h1>
+                <p>
+                    AAU Undergraduate Student Web Design New Media Major
+                </p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h2>
+                    Things I like
+                </h2>
+                <ol>
+                    <li>
+                        Playing computer games
+                    </li>
+                    <li>
+                        Riding horses
+                    </li>
+                    <li>
+                        Movies
+                    </li>
+                    <li>
+                        Travel
+                    </li>
+                </ol>
+            </div>
+            <div>
+                <h2>
+                    Things I don't like
+                </h2>
+                <ol>
+                    <li>
+                        Get up early
+                    </li>
+                    <li>
+                        Being sick
+                    </li>
+                </ol>
+            </div>
+            <div>
+                <h1>
+                    Example h1 content
+                </h1>
+                
+                <h2>
+                    Example h2 content
+                </h2>
+                <h3>
+                    Example h3 content
+                </h3>
+                <h4>
+                    Example h4 content
+                </h4>
+                <h5>
+                    Example h5 content
+                </h5>
+                <h6>
+                    Example h6 content
+                </h6>
+            </div>
+        </div>
+        <footer>
+            This page is a part of
+            <a href="http://web1.yukikodesign.com">
+                web1
+            </a>
+            . Check out the 
+            <a href="http://kitanobai.github.io/web1">
+                other versions of the site.
+            </a>
+        </footer>
     </body>
 </html>
