--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -3,47 +3,47 @@
         <title>
             My first page!!!
         </title>
-        <link rel="stlesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
+        <div class="hero">
+            <nav class="main-nav">
+                <a class="nav-link" href="index.html">
                     Shuo's Web1
                 </a>
-                 <a href="about.html">
+                 <a class="nav-link" href="about.html">
                     About Me
                 </a>
-                 <a href="search.html">
+                 <a class="nav-link" href="search.html">
                     Search
                 </a>
-                 <a href="coffee.html">
+                 <a class="nav-link" href="coffee.html">
                     Coffee
                 </a>
-                 <a href="assignments.html">
+                 <a class="nav-link" href="assignments.html">
                     Assignments
                 </a>
             </nav>
-            <div>
-                <h1>
+            <div class="hero-card">
+                <h1 class="hero-card-title">
                     Shuo's Web 1 pages
                 </h1>
-                <p>
+                <p class="hero-card-description">
                     Web development and design practice. See my progression of skills as I learn HTML and CSS.
                 </p>
-                <a href="about.html">
+                <a class="hero-card-link" href="about.html">
                     About me
                 </a>
             </div>
 
         </div>
-        <div>
-            <div>
+        <div class="main-content">
+            <div class="card">
                 <a herf="search.html">
                     <img src="images/sky.jpg">
                 </a>
                 <h4>
-                    <a href="search.html">
+                    <a class="card-title" href="search.html">
                         Search
                     </a>
                     
@@ -52,12 +52,12 @@
                     Forms, videos and maps
                 </p>
             </div>
-            <div>
+            <div class="main-content">
                 <a href="search.html">
                     <img src="images/coffee.jpg">
                 </a>
                 <h4>
-                    <a href="coffee.html">
+                    <a class="card-title" href="coffee.html">
                         Coffee
                     </a>
                 </h4>
@@ -65,12 +65,12 @@
                     Menu for a  fake coffee shop
                 </p>
             </div>
-            <div>
+            <div class="main-content">
                 <a href="search.html">
                     <img src="images/coast.jpg">
                 </a>
                 <h4>
-                    <a href="assignments.html">
+                    <a class="card-title" href="assignments.html">
                         Assignments
                     </a>
                 </h4>
@@ -79,13 +79,13 @@
                 </p>
             </div>
         </div>
-        <footer>
+        <footer class="footer">
             This page is a part of
-            <a href="http://web1.yukikodesign.com">
+            <a class="fotter-link" href="http://web1.yukikodesign.com">
                 web1
             </a>
             . Check out the 
-            <a href="http://kitanobai.github.io/web1">
+            <a class="footer-link" href="http://kitanobai.github.io/web1">
                 other versions of the site.
             </a>
         </footer>
