--- a/assignment-3/search.html
+++ b/assignment-3/search.html
@@ -3,53 +3,53 @@
         <title>
             My first page!!!
         </title>
-        
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
+        <div class="hero">
+            <nav class="main-nav">
+                <a class="nav-link" href="index.html">
                     Shuo's Web1
                 </a>
-                 <a href="about.html">
+                 <a class="nav-link" href="about.html">
                     About Me
                 </a>
-                 <a href="search.html">
+                 <a class="nav-link" href="search.html">
                     Search
                 </a>
-                 <a href="coffee.html">
+                 <a class="nav-link" href="coffee.html">
                     Coffee
                 </a>
-                 <a href="assignments.html">
+                 <a class="nav-link" href="assignments.html">
                     Assignments
                 </a>
             </nav>
-            <div>
-                <h1>
+            <div class="hero-card">
+                <h1 class="hero-card-title">
                     Search and Embeddables
                 </h1>
-                <p>
+                <p class="hero-card-description">
                     Forms, video, and maps
                 </p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="main-content">
+            <div class="search-placeholder">
                 <h1>
                     Placeholder
                 </h1>
-                <p>
+                <p >
                     Will add a search form, a video, and a map later!
                 </p>
             </div>
         </div>
-        <footer>
+        <footer class="footer">
             This page is a part of
-            <a href="http://web1.yukikodesign.com">
+            <a class="fotter-link" href="http://web1.yukikodesign.com">
                 web1
             </a>
             . Check out the 
-            <a href="http://kitanobai.github.io/web1">
+            <a class="footer-link" href="http://kitanobai.github.io/web1">
                 other versions of the site.
             </a>
         </footer>
