--- a/assignment-3/about.html
+++ b/assignment-3/about.html
@@ -3,39 +3,39 @@
         <title>
             My first page!!!
         </title>
-        
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
+        <div class="hero">
+            <nav class="main-nav">
+                <a class="nav-link" href="index.html">
                     Shuo's Web1
                 </a>
-                 <a href="about.html">
+                 <a class="nav-link" href="about.html">
                     About Me
                 </a>
-                 <a href="search.html">
+                <a class="nav-link" href="search.html">
                     Search
                 </a>
-                 <a href="coffee.html">
+                <a class="nav-link" href="coffee.html">
                     Coffee
                 </a>
-                 <a href="assignments.html">
+                <a class="nav-link" href="assignments.html">
                     Assignments
                 </a>
             </nav>
-            <div>
+            <div class="hero-card">
                 <img src="images/me.jpg">
-                <h1>
+                <h1 class="hero-card-title">
                     About Shuo
                 </h1>
-                <p>
+                <p class="hero-card-description">
                     AAU Undergraduate Student Web Design New Media Major
                 </p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="main-content">
+            <div class="about-list-container">
                 <h2>
                     Things I like
                 </h2>
@@ -54,7 +54,7 @@
                     </li>
                 </ol>
             </div>
-            <div>
+            <div class="about-list-container">
                 <h2>
                     Things I don't like
                 </h2>
@@ -67,7 +67,7 @@
                     </li>
                 </ol>
             </div>
-            <div>
+            <div class="about-list-container">
                 <h1>
                     Example h1 content
                 </h1>
@@ -89,13 +89,13 @@
                 </h6>
             </div>
         </div>
-        <footer>
+        <footer class="footer">
             This page is a part of
-            <a href="http://web1.yukikodesign.com">
+            <a class="footer-link" href="http://web1.yukikodesign.com">
                 web1
             </a>
             . Check out the 
-            <a href="http://kitanobai.github.io/web1">
+            <a class="footer-link" href="http://kitanobai.github.io/web1">
                 other versions of the site.
             </a>
         </footer>
