--- a/assignment-3/assignments.html
+++ b/assignment-3/assignments.html
@@ -3,159 +3,161 @@
         <title>
             My first page!!!
         </title>
-        
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
+        <div class="hero">
+            <nav class="main-nav">
+                <a  class="nav-link" href="index.html">
                     Shuo's Web1
                 </a>
-                 <a href="about.html">
+                 <a class="nav-link" href="about.html">
                     About Me
                 </a>
-                 <a href="search.html">
+                 <a class="nav-link" href="search.html">
                     Search
                 </a>
-                 <a href="coffee.html">
+                 <a class="nav-link" href="coffee.html">
                     Coffee
                 </a>
-                <a href="assignments.html">
+                <a class="nav-link" href="assignments.html">
                     Assignments
                 </a>
             </nav>
-            <div>
-                <h1>
+            <div class="hero-card">
+                <h1 class="hero-card-title">
                     Assignments
                 </h1>
-                <p>
+                <p class="hero-card-description">
                     A list of assignments for the first half of the semester.
                 </p>
             </div>
 
         </div>
             
-        <div>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-1/">
-                    Assignment 1: Simple Mockup
-                </a>
-            </dt>
-            <dd>
-                Mock up pages in photoshop, save out and link
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-2/">
-                    Assignment 2: Simple HTML
-                </a>
-            </dt>
-            <dd>
-                Create pages in HTML, link together
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-3/">
-                    Assignment 3: Style About Me
-                </a>
-            </dt>
-            <dd>
-                Style pages in CSS
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-4/">
-                    Assignment 4: Update Mockups and sytles
-                </a>
-            </dt>
-            <dd>
-                Update mockups, apply css
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-5/">
-                    Assignment 5: Navigation and Cards
-                </a>
-            </dt>
-            <dd>
-                Update navigation on all pages
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-6/">
-                    Assignment 6: Hero, embeddables and translations
-                </a>
-            </dt>
-            <dd>
-                Add hero image to pages, add translations styles
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-7/">
-                    Assignment 7: Tutorial Pitch
-                </a>
-            </dt>
-            <dd>
-                Outline and Photoshop wireframes
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-8/">
-                    Assignment 8: B/W Mockups
-                </a>
-            </dt>
-            <dd>
-                Create mockups in B/W with font choices
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-9/">
-                    Assignment 9: Color Mocks in 3 ways
-                </a>
-            </dt>
-            <dd>
-                Create full color mockups in 3 different styles
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-10/">
-                    Assignment 10 : Appply style throughout site
-                </a>
-            </dt>
-            <dd>
-                Apply favorite parts of styles to all pages
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-11/">
-                    Assignment 11 : Prototype and CSS Layout
-                </a>
-            </dt>
-            <dd>
-                Clickable prototype, attempt CSS layout
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-12/">
-                    Assignment 12 :  Styled Home, to do list
-                </a>
-            </dt>
-            <dd>
-                Style home page, write a to do list
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/assignment-13/">
-                    Assignment 13: Refine Content and style 
-                </a>
-            </dt>
-            <dd>
-                Add and style content, create new to do list
-            </dd>
-            <dt>
-                <a href="https://yukikodesign.github.io/web1/instructions/final/">
-                    Assignment 14: Case study 
-                </a>
-            </dt>
-            <dd>
-                Create a case study and polish site for critique
-            </dd>
+        <div class="main-content">
+            <dl class="dl.assignment-list">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-1/">
+                        Assignment 1: Simple Mockup
+                    </a>
+                </dt>
+                <dd>
+                    Mock up pages in photoshop, save out and link
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-2/">
+                        Assignment 2: Simple HTML
+                    </a>
+                </dt>
+                <dd>
+                    Create pages in HTML, link together
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-3/">
+                        Assignment 3: Style About Me
+                    </a>
+                </dt>
+                <dd>
+                    Style pages in CSS
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-4/">
+                        Assignment 4: Update Mockups and sytles
+                    </a>
+                </dt>
+                <dd>
+                    Update mockups, apply css
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-5/">
+                        Assignment 5: Navigation and Cards
+                    </a>
+                </dt>
+                <dd>
+                    Update navigation on all pages
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-6/">
+                        Assignment 6: Hero, embeddables and translations
+                    </a>
+                </dt>
+                <dd>
+                    Add hero image to pages, add translations styles
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-7/">
+                        Assignment 7: Tutorial Pitch
+                    </a>
+                </dt>
+                <dd>
+                    Outline and Photoshop wireframes
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-8/">
+                        Assignment 8: B/W Mockups
+                    </a>
+                </dt>
+                <dd>
+                    Create mockups in B/W with font choices
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-9/">
+                        Assignment 9: Color Mocks in 3 ways
+                    </a>
+                </dt>
+                <dd>
+                    Create full color mockups in 3 different styles
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-10/">
+                        Assignment 10 : Appply style throughout site
+                    </a>
+                </dt>
+                <dd>
+                    Apply favorite parts of styles to all pages
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-11/">
+                        Assignment 11 : Prototype and CSS Layout
+                    </a>
+                </dt>
+                <dd>
+                    Clickable prototype, attempt CSS layout
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-12/">
+                        Assignment 12 :  Styled Home, to do list
+                    </a>
+                </dt>
+                <dd>
+                    Style home page, write a to do list
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-13/">
+                        Assignment 13: Refine Content and style 
+                    </a>
+                </dt>
+                <dd>
+                    Add and style content, create new to do list
+                </dd>
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/final/">
+                        Assignment 14: Case study 
+                    </a>
+                </dt>
+                <dd>
+                    Create a case study and polish site for critique
+                </dd>
+            </dl>
         </div>
-        <footer>
+        <footer class="footer">
             This page is a part of
-            <a href="http://web1.yukikodesign.com">
+            <a class="fotter-link" href="http://web1.yukikodesign.com">
                 web1
             </a>
             . Check out the 
-            <a href="http://kitanobai.github.io/web1">
+            <a class="fotter-link" href="http://kitanobai.github.io/web1">
                 other versions of the site.
             </a>
         </footer>
