--- a/assignment-3/coffee.html
+++ b/assignment-3/coffee.html
@@ -3,84 +3,84 @@
         <title>
             My first page!!!
         </title>
-        
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div>
-            <nav>
-                <a href="index.html">
+        <div class="hero">
+            <nav class="main-nav">
+                <a class="nav-link" href="index.html">
                     Shuo's Web1
                 </a>
-                 <a href="about.html">
+                 <a class="nav-link" href="about.html">
                     About Me
                 </a>
-                 <a href="search.html">
+                 <a class="nav-link" href="search.html">
                     Search
                 </a>
-                 <a href="coffee.html">
+                 <a class="nav-link" href="coffee.html">
                     Coffee
                 </a>
-                 <a href="assignments.html">
+                 <a class="nav-link" href="assignments.html">
                     Assignments
                 </a>
             </nav>
-            <div>
-                <h1>
+            <div class="hero-card">
+                <h1 class="hero-card-title">
                     Coffee Shop Menu
                 </h1>
-                <p>
+                <p class="hero-card-description">
                     Artisan Drinks made with love and skills
                 </p>
             </div>
         </div>
         
-        <div>
-            <blockquote>
+        <div class="main-content">
+            <blockquote class="coffee-quote">
                 The best coffee shop in the city!
                 <cite>
                     -Kristin Coffeeheart
                 </cite>
             </blockquote>
-            <div>
-                <dt>
+            <div class="menu">
+                <dt class="dt">
                     Coffee
                 </dt>
-                <dd>
+                <dd class="dd">
                     Normal brew - avaliable in light, medium, or dark roast
                 </dd>
                 <dt>
                     Latte
-                </dt>
-                <dd>
+                </dt class="dt">
+                <dd class="dd">
                     Expresso with steamed milk
                 </dd>
-                <dt>
+                <dt class="dt">
                     Cappucino
                 </dt>
-                <dd>
+                <dd class="dd">
                     Expresso with thick foamed milk
                 </dd>
-                <dt>
+                <dt class="dt">
                     Mocha
                 </dt>
-                <dd>
+                <dd class="dd">
                     Expresso with dark chocolate and steamed milk
                 </dd>
-                <dt>
+                <dt class="dt">
                     Cold Brew
                 </dt>
-                <dd>
+                <dd class="dd">
                     A strong iced coffee drink brewed cold over 24 hours
                 </dd>
             </div>
         </div>
-        <footer>
+        <footer class="footer">
             This page is a part of
-            <a href="http://web1.yukikodesign.com">
+            <a class="fotter-link" href="http://web1.yukikodesign.com">
                 web1
             </a>
             . Check out the 
-            <a href="http://kitanobai.github.io/web1">
+            <a class="fotter-link" href="http://kitanobai.github.io/web1">
                 other versions of the site.
             </a>
         </footer>
