--- a/assignment-6/search.html
+++ b/assignment-6/search.html
@@ -44,7 +44,7 @@
             <h1>
                 Embed a video
             </h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/rZ92sDzCg9k" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nkEVdoD-TEM" frameborder="0" allowfullscreen></iframe>
             <h1>
                 Embed a map
             </h1>
