--- a/assignment-6/assignments.html
+++ b/assignment-6/assignments.html
@@ -35,117 +35,117 @@
         </div>
             
         <div class="main-content">
-            <dl class="dl.assignment-list">
-                <dt class="assignmnet-list dt">
-                    <a  class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-1/">
+            <dl class="assignment-list">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-1/">
                         Assignment 1: Simple Mockup
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Mock up pages in photoshop, save out and link
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-2/">
+                <dt >
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-2/">
                         Assignment 2: Simple HTML
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Create pages in HTML, link together
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-3/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-3/">
                         Assignment 3: Style About Me
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Style pages in CSS
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-4/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-4/">
                         Assignment 4: Update Mockups and sytles
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Update mockups, apply css
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-5/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-5/">
                         Assignment 5: Navigation and Cards
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Update navigation on all pages
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-6/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-6/">
                         Assignment 6: Hero, embeddables and translations
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Add hero image to pages, add translations styles
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-7/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-7/">
                         Assignment 7: Tutorial Pitch
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Outline and Photoshop wireframes
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-8/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-8/">
                         Assignment 8: B/W Mockups
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Create mockups in B/W with font choices
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-9/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-9/">
                         Assignment 9: Color Mocks in 3 ways
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Create full color mockups in 3 different styles
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-10/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-10/">
                         Assignment 10 : Appply style throughout site
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Apply favorite parts of styles to all pages
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-11/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-11/">
                         Assignment 11 : Prototype and CSS Layout
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd >
                     Clickable prototype, attempt CSS layout
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-12/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-12/">
                         Assignment 12 :  Styled Home, to do list
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Style home page, write a to do list
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/assignment-13/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/assignment-13/">
                         Assignment 13: Refine Content and style 
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Add and style content, create new to do list
                 </dd>
-                <dt class="assignmnet-list dt">
-                    <a class="assignment-list a" href="https://yukikodesign.github.io/web1/instructions/final/">
+                <dt>
+                    <a href="https://yukikodesign.github.io/web1/instructions/final/">
                         Assignment 14: Case study 
                     </a>
                 </dt>
-                <dd class="assignment-list dd">
+                <dd>
                     Create a case study and polish site for critique
                 </dd>
             </dl>
